Get a simple landing page and newsletter tab for initial go-live.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,36 +3,17 @@
 
 {%- include head.html -%}
 
-<style>
-    /* CSS for the two-column layout */
-    .left-half {
-        width: 50%;
-        float: left;
-    }
-    .right-half {
-        width: 50%;
-        float: right;
-    }
-</style>
-
 <body>
 
 {%- include header.html -%}
 
-<main class="page-content" aria-label="Content">
+<main class="page-content" aria-label="Content" style="text-align: center;">
     <div class="wrapper">
-        <div class="left-half">
-            <!-- Content for the left half -->
-
-            {{ content }}
-        </div>
-        <div class="right-half">
-            <!-- Content for the right half -->
-            <img src="/website-notion/assets/3d-casual-life-man-sitting-with-coffee.png" alt="developer with coffee & mac" width="50"/>
-        </div>
+        {{ content }}
     </div>
 </main>
 
+<!-- TODO: Wireframe a final footer-->
 {%- include footer.html -%}
 
 </body>
