Update navbar image url.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         {%- assign default_paths = site.pages | map: "path" -%}
         {%- assign page_paths = site.header_pages | default: default_paths -%}
         <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-        <img src="/website-notion/assets/3d-rocket.png" alt="Divashen Govender" width="50"/>
+        <img src="assets%2F3d-rocket.png" alt="Divashen Govender" width="50"/>
         </a>
 
 
