--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,7 @@
 
 <style>
     .rocket-image {
+        max-width: none;
         margin: 10px; /* Adjust the margin value as per your requirement */
     }
 </style>
